fix dynamic menu

--- a/app/partials/top-nev-bar.html
+++ b/app/partials/top-nev-bar.html
@@ -1,4 +1,4 @@
-            <div class="container">
+<div class="container" ng-controller="menuCtrl">
             <div class="row clearfix">
                 <div class="col-xs-12 column">
                     <div class="row clearfix">
@@ -22,8 +22,16 @@
                                         <li><a href="#">Link</a></li>
                                         <li class="dropdown">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                                               
                                             <ul class="dropdown-menu">
-
+                                                <form class="navbar-form navbar-left">
+                                                    <div class="form-group">
+                                                        <input placeholder='חיפוש קטגוריה' type="text" class="form-control" ng-model="queryMenu"> <!--angular -->
+                                                    </div>
+                                                    
+                                                </form>
+                                                  <li><a href="{{i.catName}}" ng-repeat="i in all_cat|filter:queryMenu">{{i.catName}}</a> <!--angular -->
+                                                </li>
                                                 <li><a href="#">Action</a></li>
                                                 <li><a href="#">Another action</a></li>
                                                 <li><a href="#">Something else here</a></li>
